-add-a-new-configuration

--- a/basic-editing/frogStory.html
+++ b/basic-editing/frogStory.html
@@ -26,12 +26,12 @@
     </head>
     <body>
         <pre class="FrogStory">
-            The quick green frog jumps over the lazy water bug.
-                The quick green frog jumps over the lazy water bug.
-                    The quick green frog jumps over the lazy water bug.
-                        The quick green frog jumps over the lazy water bug. 
-                            The quick green frog jumps over the lazy water bug.
-                                The quick green frog jumps over the lazy water bug.
+            The quick green frog hopped over the watchful water bug.
+                The quick green frog trotted over the watchful water bug.
+                    The quick green frog ran over the watchful water bug.
+                        The quick green frog sprinted over the watchful water bug. 
+                            The quick green frog flew over the watchful water bug.
+                                The quick green frog jumps over the watchful water bug.
         </pre>
     <script>
             class Program
@@ -56,13 +56,15 @@
 <pre style="font-family: monospace;">
 Computer Scientists Can't Spell :)
 
-███████  ██████ ██ ███████ ███    ██  ██████ ███████      ██████ ██████   ██████  ███    ███ ██   ██  ██████ ███████ ██████  
-██      ██      ██ ██      ██ ██  ██ ██      ██          ██      ██  ██  ██    ██ ██ █  █ ██ ██   ██    ██   ██      ██   ██
-███████ ██      ██ █████   ██ ██  ██ ██      █████       ██      ██████  ██    ██ ██ ████ ██ ██   ██    ██   █████   ██████    
-     ██ ██      ██ ██      ██  ██ ██ ██      ██          ██      ██      ██    ██ ██  ██  ██ ██   ██    ██   ██      ██   ██ 
-███████  ██████ ██ ███████ ██   ████  ██████ ███████      ██████ ██       ██████  ██  ██  ██ ███████    ██   ███████ ██   ██
+ ██████   ██████  ███    ███ ██████ ██   ██  ██████ ███████ ██████   ███████ ██████  ██ ███████ ███    ██  ██████ ███████   
+██       ██    ██ ██ █  █ ██ ██  ██ ██   ██    ██   ██      ██   ██  ██      ██      ██ ██      ██ ██  ██ ██      ██        
+██       ██    ██ ██ ████ ██ ██████ ██   ██    ██   █████   ██████   ███████ ██      ██ █████   ██ ██  ██ ██      █████     
+██       ██    ██ ██  ██  ██ ██     ██   ██    ██   ██      ██   ██       ██ ██      ██ ██      ██  ██ ██ ██      ██        
+ ██████   ██████  ██  ██  ██ ██     ███████    ██   ███████ ██   ██  ███████  ██████ ██ ███████ ██   ████  ██████ ███████   
 </pre>
 </code>
     </body>
 </html>
 <!-- *******************************************************************************  -->
+
+
